--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "generate": "plop"
   },
   "dependencies": {
     "@kuma-ui/core": "^1.5.5",
@@ -35,6 +36,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "eslint-plugin-storybook": "^0.6.15",
+    "plop": "^4.0.1",
     "postcss": "^8",
     "storybook": "^7.6.7",
     "tailwindcss": "^3.3.0",
