graphqlを利用できるようにした

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     ],
     "paths": {
       "@/*": ["./app/*"],
-      "@providers/*": ["./app/components/providers/*"]
+      "@lib/*": ["./lib/*"]
     }
   },
   "include": [
