--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "generate": "plop"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.9",
+    "@apollo/experimental-nextjs-app-support": "^0.6.0",
     "@kuma-ui/core": "^1.5.5",
     "jose": "^5.2.0",
     "next": "14.0.4",
